# hoodik

./: .dockerignore  .env.e2e  .env.example  .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  Justfile  README.md  SECURITY.md  build.rs  builder.Dockerfile  docker-compose.yml  e2e  mini.Dockerfile  package-lock.json  package.json  rust-e2e  rust-integration  rust-toolchain.toml  rust-unit  test  test-clients-web  test-rust  turbo.json  unraid-template.xml  web-e2e
admin/: Cargo.toml
admin/src/: lib.rs
admin/src/data/: mod.rs
admin/src/emails/: invite.rs  mod.rs
admin/src/repository/: files.rs  invitations.rs  mod.rs  sessions.rs  users.rs
admin/src/routes/: mod.rs
admin/src/tests/: files.rs  invitations.rs  mod.rs  sessions.rs  users.rs
auth/: Cargo.toml  README.md
auth/src/: actions.rs  auth.rs  contract.rs  data.rs  jwt.rs  lib.rs  mock.rs  rate_limit.rs  routes.rs  test.rs
auth/src/contracts/: account.rs  cookies.rs  ctx.rs  email.rs  migration.rs  mod.rs  opaque.rs  provider.rs  register.rs  repository.rs  sessions.rs
auth/src/data/: activity_query.rs  authenticated.rs  change_password.rs  claims.rs  create_user.rs  credentials.rs  extractor.rs  mod.rs  opaque.rs  resend_activation.rs  signature.rs  staff.rs  transfer_claims.rs  transfer_token.rs  two_factor.rs
auth/src/emails/: activate.rs  mod.rs
auth/src/middleware/: extractor.rs  load.rs  mod.rs  refresh.rs  verify.rs
auth/src/providers/: credentials.rs  mod.rs  (+1 more)
config/: Cargo.toml  README.md
config/src/: app.rs  auth.rs  config.rs  email.rs  helpers.rs  lib.rs  s3.rs  ssl.rs  vars.rs
context/: Cargo.toml  README.md
context/src/: lib.rs
cryptfns/: .gitignore  Cargo.toml  README.md  package.json
cryptfns/assets/: bert-base-cased.json
cryptfns/src/: aegis.rs  aegis256.rs  aes.rs  asn1.rs  base64.rs  chacha.rs  cipher.rs  crc.rs  ecdh.rs  ed25519.rs  envelope.rs  error.rs  identity.rs  lib.rs  opaque.rs  rsa.rs  spki.rs  tokenizer.rs  transition.rs  wasm.rs
email/: Cargo.toml  README.md
email/assets/: base.hbs
email/src/: contract.rs  lib.rs  template.rs
entity/: Cargo.toml  README.md
entity/src/: file_tokens.rs  file_versions.rs  files.rs  group_permission.rs  invitations.rs  join.rs  key_transitions.rs  lib.rs  links.rs  migration_rewrap_staging.rs  mock.rs  mod.rs  numeric.rs  opaque_config.rs  opaque_ksf.rs  opaque_login_sessions.rs  paginated.rs  permission.rs  prelude.rs  sessions.rs  share_events.rs  share_group_members.rs  share_groups.rs  sort.rs  tokens.rs  used_nonces.rs  user_actions.rs  user_files.rs  users.rs
error/: Cargo.toml  README.md
error/src/: lib.rs
fs/: Cargo.toml
fs/src/: contract.rs  filename.rs  fs.rs  lib.rs  streamer.rs  tar.rs
hoodik/: Cargo.toml  build.rs  package.json
hoodik/data/: hoodik.crt.pem  hoodik.key.pem
hoodik/src/: client.rs  lib.rs  main.rs  migrate.rs  seed_legacy.rs
hoodik/tests/: admin_test_email_disable.rs  auth_rate_limit.rs  auth_signature_replay.rs  compression.rs  cors.rs  email.rs  helpers.rs  key_transitions.rs  links.rs  migration.rs  opaque_login.rs  opaque_password_change.rs  readiness.rs  register_v2.rs  shares_account_deletion.rs  shares_admin_kill_switch.rs  shares_asn1_fixtures.rs  shares_audit.rs  shares_basic.rs  shares_common.rs  shares_default_cipher.rs  shares_discover.rs  shares_dual_key.rs  shares_editable_folders.rs  shares_email.rs  shares_folder.rs  shares_fork.rs  shares_groups.rs  shares_key_transition_chain.rs  shares_permissions.rs  shares_quota.rs  shares_recipient_navigation.rs  shares_search.rs  storage.rs  storage_instance_quota.rs  storage_legacy_routing.rs  storage_replace_content.rs  storage_set_editable.rs  storage_tar_upload.rs  thumbnails.rs  (+3 more)
links/: Cargo.toml  README.md
links/src/: lib.rs  repository.rs  test.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_user.rs  m20220101_000001_create_users.rs  m20220101_000002_create_user_actions.rs  m20230114_091730_create_sessions.rs  m20230409_091730_create_files.rs  m20230409_101730_create_user_files.rs  m20230429_091730_create_tokens.rs  m20230429_101730_create_file_tokens.rs  m20230521_074334_create_links.rs  m20230612_074334_create_invitations.rs  m20240915_074334_alter_files_add_hashes.rs  m20260326_000001_alter_files_add_cipher.rs  m20260406_000001_alter_files_add_editable.rs  m20260418_000001_alter_files_add_versioning.rs  m20260418_000002_create_file_versions.rs  m20260601_000001_alter_user_files_share_role.rs  m20260601_000002_alter_user_files_share_metadata.rs  m20260601_000003_add_user_files_indexes.rs  m20260601_000004_create_share_events.rs  m20260601_000005_alter_users_share_notifications.rs  m20260601_000006_create_share_groups.rs  m20260601_000007_create_share_group_members.rs  m20260601_000008_alter_settings_sharing_kill_switch.rs  m20260601_000009_alter_files_folder_member_list.rs  m20260601_000010_alter_share_group_members_role.rs  m20260705_000001_alter_users_key_type.rs  m20260705_000002_create_key_transitions.rs  m20260705_000003_create_opaque_tables.rs  m20260705_000004_alter_key_transitions_old_key_type.rs  m20260705_000005_alter_share_events_file_id_nullable.rs  m20260705_000006_alter_users_ksf_params.rs  m20260710_000001_create_migration_rewrap_staging.rs  m20260710_000002_alter_key_transitions_new_keys.rs  m20260715_000001_alter_user_files_member_signed_at.rs  m20260716_000001_create_used_nonces.rs  main.rs  share_events_rebuild_test.rs
settings/: Cargo.toml
settings/src/: factory.rs  lib.rs  rule.rs  store.rs
shares/: Cargo.toml
shares/src/: lib.rs
storage/: Cargo.toml  README.md
storage/src/: contract.rs  lib.rs  mock.rs  permission.rs  storage.rs  streamer.rs
transfer/: Cargo.toml  LICENSE.md  package.json
transfer/.cargo/: config.toml
transfer/scripts/: patch-pkg.mjs
transfer/src/: checksum.rs  config.rs  download.rs  error.rs  lib.rs  platform.rs  tar.rs  tests.rs  types.rs  upload.rs  upload_tar.rs  upload_trace.rs
util/: Cargo.toml  README.md
util/src/: actix.rs  attributes.rs  datetime.rs  generate.rs  lib.rs  password.rs  url.rs  validation.rs
(+967 files in other folders)
