[package]
name = "hoodik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  ".",
  "auth",
  "config",
  "context",
  "cryptfns",
  "entity",
  "error",
  "migration",
  "util",
]

[dependencies]
log = "^0.4"
env_logger = "^0.10"
actix-web = "^4"
serde = "*"
serde_json = "*"

auth = { path = "./auth" }
config = { path = "./config" }
context = { path = "./context" }
cryptfns = { path = "./cryptfns" }
entity = { path = "./entity" }
error = { path = "./error" }
migration = { path = "./migration" }

[dev-dependencies]
lazy_static = "^1.4"
auth = { path = "./auth", features = ["mock"] }
context = { path = "./context", features = ["mock"] }
cryptfns = { path = "./cryptfns", features = ["mock"] }
