[package]
name = "auth"
version = "1.1.0"
edition = "2021"
authors = ["Tibor Hudik <hello@hudik.eu>"]
readme = "README.md"
license-file = "../LICENSE.md"
description = "Hoodik app authentication service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "auth"
path = "src/lib.rs"

[features]
mock = []

[dependencies]
async-trait = "0.1.57"
validr = "^0.3"
chrono = { version = "0.4.23", features = ["serde"] }
log = "^0.4"
actix-web = "^4"
futures-util = "^0.3"
jsonwebtoken = "^8"
serde = "^1"
serde_json = "^1"

context = { path = "../context" }
error = { path = "../error" }
entity = { path = "../entity" }
util = { path = "../util" }
cryptfns = { path = "../cryptfns" }

[dev-dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }

context = { path = "../context", features = ["mock"] }
entity = { path = "../entity", features = ["mock"] }
cryptfns = { path = "../cryptfns", features = ["mock"] }
