[package]
name = "auth"
version = "1.1.0"
edition = "2021"
rust-version = "1.91"
authors = ["Tibor Hudik <hello@hudik.eu>"]
readme = "README.md"
license-file = "../LICENSE.md"
description = "Hoodik app authentication service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "auth"
path = "src/lib.rs"

[features]
mock = []

[dependencies]
async-trait = { workspace = true }
validr = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
actix-web = { workspace = true }
futures-util = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

context = { path = "../context" }
error = { path = "../error" }
entity = { path = "../entity" }
util = { path = "../util" }
cryptfns = { path = "../cryptfns" }

[dev-dependencies]
async-std = { workspace = true }

context = { path = "../context", features = ["mock"] }
entity = { path = "../entity", features = ["mock"] }
cryptfns = { path = "../cryptfns", features = ["mock"] }
