[package]
name = "config"
version = "0.1.0"
edition = "2021"
authors = ["Tibor Hudik <hello@hudik.eu>"]
readme = "README.md"
license-file = "../LICENSE.md"
description = "Hoodik app configuration service and wrapper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "config"
path = "src/lib.rs"

[features]
mock = []

[dependencies]
dotenv = "^0.15"
uuid = "^1"
error = { path = "../error" }
clap = { version = "^4", features = ["string"] }
