[package]
name = "config"
version = "1.2.0"
edition = "2021"
authors = ["Tibor Hudik <hello@hudik.eu>"]
readme = "README.md"
license-file = "../LICENSE.md"
description = "Hoodik app configuration service and wrapper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "config"
path = "src/lib.rs"

[features]
mock = []

[dependencies]
url = "^2"
dotenv = "^0.15"
uuid = "^1"
rustls = "^0.20"
rustls-pemfile = "^1"
rcgen = "^0.10"
log = "^0.4"
chrono = { version = "0.4.23", features = ["serde"] }
error = { path = "../error" }
clap = { version = "^4", features = ["string"] }
path-absolutize = "^3"
