[package]
name = "config"
version = "1.2.0"
edition = "2021"
rust-version = "1.91"
authors = ["Tibor Hudik <hello@hudik.eu>"]
readme = "README.md"
license-file = "../LICENSE.md"
description = "Hoodik app configuration service and wrapper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "config"
path = "src/lib.rs"

[features]
mock = []

[dependencies]
url = { workspace = true }
dotenv = { workspace = true }
uuid = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
error = { path = "../error" }
clap = { workspace = true }
path-absolutize = { workspace = true }
