[package]
name = "context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0.10", features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-actix-rustls",
  "macros",
] }
log = "^0.4"

config = { path = "../config" }
error = { path = "../error" }

[dev-dependencies]
sea-orm = { version = "^0.10", features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-actix-rustls",
  "macros",
  "debug-print",
  "mock",
] }
