[package]
name = "context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "context"
path = "src/lib.rs"

[features]
mock = ["config/mock", "sea-orm/mock", "migration"]

[dependencies]
actix-web = "^4"
sea-orm = { version = "^0.10", features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-actix-rustls",
  "macros",
] }
log = "^0.4"
env_logger = "^0.10"

config = { path = "../config" }
error = { path = "../error" }
migration = { path = "../migration", optional = true }
