[package]
name = "cryptfns"
version = "1.0.2"
edition = "2021"
rust-version = "1.91"
authors = ["Tibor Hudik <hello@hudik.eu>"]
license-file = "../LICENSE.md"
repository = "https://github.com/htunlogic/hoodik"
description = "A library with tools prepared for encryption and decryption of data within the Hoodik application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cryptfns"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["tokenizer"]
mock = []
tokenizer = ["dep:tokenizers"]
# Cheap Argon2id KSF for the e2e WASM build only. Never enabled by production
# builds — see cryptfns::opaque::ksf.
fast-test-kdf = []

[dependencies]
rand = "^0.8"
rsa = { workspace = true }
der = { workspace = true }
sha256 = { version = "^1", default-features = false }
base64 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2.114"
getrandom = { version = "^0.2", features = ["js"] }
ascon-aead = "^0.4"
crc = "^3"
chacha20poly1305 = "0.10.1"
aegis = { version = "0.9" }
ed25519-dalek = { version = "^2", features = ["rand_core", "pkcs8", "pem"] }
x25519-dalek = { version = "^2", features = ["static_secrets"] }
pkcs8 = { version = "^0.10", features = ["pem", "alloc"] }
hkdf = "^0.12"
sha2 = "^0.10"
opaque-ke = { version = "^4", features = ["ristretto255", "argon2"] }
argon2 = "^0.5"
# Post-quantum half of the hybrid file-key wrap. Pinned exactly and stripped to
# the verified portable path: default-features off keeps `libcrux-traits` from
# dragging `rand ^0.10` into the wasm graph, and `mlkem768` is the only set we
# instantiate. The app FFI additionally disables the unverified NEON path via
# LIBCRUX_DISABLE_SIMD128 (see hoodik-app/rust/.cargo/config.toml).
libcrux-ml-kem = { version = "=0.0.9", default-features = false, features = ["mlkem768"] }
# libcrux does not zeroize its key or shared-secret types; we hold the decaps
# key and every shared secret in Zeroizing ourselves.
zeroize = { version = "^1", features = ["alloc"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
num-traits = { version = "0.2.9", features = ["libm"], default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokenizers = { version = "^0.13", default-features = false, features = ["unstable_wasm"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokenizers = { version = "^0.13", default-features = false, features = ["onig"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[lints.rust.unexpected_cfgs]
# Allow wasm-bindgen internal cfg flags used by the macro
level = "warn"
check-cfg = ["cfg(wasm_bindgen_unstable_test_coverage)"]
