[package]
name = "email"
version = "1.0.0"
edition = "2021"
authors = ["Tibor Hudik <hello@hudik.eu>"]
readme = "README.md"
license-file = "../LICENSE.md"
description = "Email provider service for the backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
mock = []

[dependencies]
error = { path = "../error" }
config = { path = "../config" }
lettre = "0.11"
log = "^0.4"
handlebars = "^4"
serde = "^1"
serde_json = "^1"
async-trait = "^0.1"
tokio = "^1"
