[package]
name = "email"
version = "1.0.0"
edition = "2021"
rust-version = "1.91"
authors = ["Tibor Hudik <hello@hudik.eu>"]
readme = "README.md"
license-file = "../LICENSE.md"
description = "Email provider service for the backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
mock = []

[dependencies]
error = { path = "../error" }
config = { path = "../config" }
lettre = { workspace = true }
log = { workspace = true }
handlebars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
