[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "entity"
path = "src/lib.rs"

[features]
mock = ["sea-orm/mock"]

[dependencies]
sea-orm = { version = "^0.10", features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-actix-rustls",
  "macros",
] }
chrono = { version = "0.4.23", features = ["serde"] }
serde = "*"
serde_json = "*"
