[package]
name = "error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "error"
path = "src/lib.rs"

[dependencies]
thiserror = "^1"
sea-orm = { version = "^0.11", features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-actix-rustls",
] }
validr = "^0.3"
actix-web = "^4"
rsa = "^0.8"
sequoia-openpgp = "^1"
base64 = "^0.21"
hex = "^0.4"
serde = "*"
serde_json = "*"
