[package]
name = "error"
version = "1.0.1"
edition = "2021"
authors = ["Tibor Hudik <hello@hudik.eu>"]
readme = "README.md"
license-file = "../LICENSE.md"
description = "One wrapper error that serves to easily handle errors through the entire application."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "error"
path = "src/lib.rs"

[dependencies]
thiserror = "^1"
sea-orm = { version = "^0.12", features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-actix-rustls",
] }
validr = "^0.3"
actix-multipart = "^0.6"
actix-web = "^4"
rsa = "^0.8"
base64 = "^0.21"
hex = "^0.4"
jsonwebtoken = "^8"
reqwest = "^0.11"
serde = "^1"
serde_json = "^1"
glob = "^0.3"
rcgen = "^0.10"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
rustls = "^0.20"
lettre = "^0.11"
handlebars = "^4"

cryptfns = { path = "../cryptfns" }
