[package]
name = "error"
version = "1.0.1"
edition = "2021"
rust-version = "1.91"
authors = ["Tibor Hudik <hello@hudik.eu>"]
readme = "README.md"
license-file = "../LICENSE.md"
description = "One wrapper error that serves to easily handle errors through the entire application."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "error"
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
sea-orm = { workspace = true, features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-actix-rustls",
] }
validr = { workspace = true }
actix-multipart = { workspace = true }
actix-web = { workspace = true }
rsa = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
glob = { workspace = true }
rcgen = { workspace = true }
uuid = { workspace = true }
rustls = { workspace = true }
lettre = { workspace = true }
handlebars = { workspace = true }

cryptfns = { path = "../cryptfns" }
