[package]
name = "fs"
version = "1.0.0"
edition = "2021"
authors = ["Tibor Hudik <hello@hudik.eu>"]
readme = "README.md"
license-file = "../LICENSE.md"
description = "File system abstraction library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
error = { path = "../error" }

fs4 = "^0.6"
log = "^0.4"
actix-web = "^4"
futures-util = "^0.3"
glob = "^0.3"
pin-project = "^1"
tokio = "^1"
async-trait = "^0.1"
chrono = "^0.4"
