[package]
name = "fs"
version = "1.0.0"
edition = "2021"
rust-version = "1.91"
authors = ["Tibor Hudik <hello@hudik.eu>"]
readme = "README.md"
license-file = "../LICENSE.md"
description = "File system abstraction library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
error = { path = "../error" }

fs4 = { workspace = true }
log = { workspace = true }
actix-web = { workspace = true }
futures-util = { workspace = true }
glob = { workspace = true }
pin-project = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
