[package]
name = "hoodik"
version = "1.6.0"
edition = "2021"
authors = ["Tibor Hudik <hello@hudik.eu>"]
readme = "../README.md"
license-file = "../LICENSE.md"
description = "Hoodik is a simple, fast and end to end encrypted cloud storage."
default-run = "hoodik"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
log = "^0.4"
env_logger = "^0.10"
actix-web = { version = "^4", features = ["rustls"] }
actix-cors = "0.6.3"
reqwest = "^0.11"
serde = "^1"
serde_json = "^1"

admin = { path = "../admin" }
auth = { path = "../auth" }
config = { path = "../config" }
context = { path = "../context" }
cryptfns = { path = "../cryptfns" }
entity = { path = "../entity" }
error = { path = "../error" }
fs = { path = "../fs" }
links = { path = "../links" }
migration = { path = "../migration" }
storage = { path = "../storage" }

[dev-dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
auth = { path = "../auth", features = ["mock"] }
context = { path = "../context", features = ["mock"] }
cryptfns = { path = "../cryptfns", features = ["mock"] }
email = { path = "../email", features = ["mock"] }
links = { path = "../links", features = ["mock"] }
storage = { path = "../storage", features = ["mock"] }
settings = { path = "../settings", features = [] }

# Configuration for metadata of the deb package
[package.metadata.deb]
maintainer-scripts = "package/deb"
# This will be generated during the packaging process
changelog = "changelog"
assets = [
    [
      "target/release/hoodik",
      "/usr/bin/hoodik",
      "0755"
    ],
    [
        "../.env.example",
        "/usr/share/hoodik/hoodik.conf",
        "644",
    ],
]
systemd-units = { unit-name = "hoodik", unit-scripts = "../package/common", enable = true }

# Variant of the Debian packaging configuration that:
#   a) statically links with OpenSSL when building a Debian package because the
#      newest OpenSSL available on Ubuntu 16.04 at the time of writing is 1.0.2g
#      (see: https://packages.ubuntu.com/xenial/openssl) while Krill requires
#      OpenSSL >= 1.1.0.
#   b) uses a simpler systemd service unit file because Ubuntu 16.04 doesn't
#      support newer features supported by Ubuntu 18.04 and 20.04.
[package.metadata.deb.variants.ubuntu-focal]

[package.metadata.deb.variants.ubuntu-jammy]

[package.metadata.deb.variants.debian-bullseye]

[package.metadata.deb.variants.debian-bookworm]

# Cross compilation variants:
# Note: we have to specifiy dependencies manually because we don't run cargo-deb
# on the target platform and so it cannot determine the dependencies correctly
# for us.

[package.metadata.deb.variants.debian-buster-aarch64-unknown-linux-gnu]
depends = "adduser, passwd, libc6 (>= 2.28)"

[package.metadata.deb.variants.debian-buster-arm-unknown-linux-gnueabihf]
depends = "adduser, passwd, libc6 (>= 2.28)"

[package.metadata.deb.variants.debian-bullseye-armv7-unknown-linux-gnueabihf]
depends = "adduser, passwd, libc6 (>= 2.28)"
