[package]
name = "links"
version = "1.0.0"
edition = "2021"
rust-version = "1.91"
authors = ["Tibor Hudik <hello@hudik.eu>"]
readme = "README.md"
license-file = "../LICENSE.md"
description = "Application links service that enables users to share public links to their hosted files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mock = ["context/mock", "entity/mock"]

[dependencies]
log = { workspace = true }
actix-web = { workspace = true }
validr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
cached = { workspace = true }

auth = { path = "../auth" }
context = { path = "../context" }
cryptfns = { path = "../cryptfns" }
entity = { path = "../entity" }
error = { path = "../error" }
fs = { path = "../fs" }
util = { path = "../util" }

[dev-dependencies]
context = { path = "../context", features = ["mock"] }
entity = { path = "../entity", features = ["mock"] }
