[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }

config = { path = "../config" }

[dependencies.sea-orm-migration]
version = "^0.11"
features = ["sqlx-postgres", "sqlx-sqlite", "runtime-actix-rustls"]
