[package]
name = "settings"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mock = []

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
async-trait = "^0.1"
async-std = "^1"
log = "^0.4"

config = { path = "../config" }
error = { path = "../error" }
fs = { path = "../fs" }
