[package]
name = "settings"
version = "1.0.1"
edition = "2021"
rust-version = "1.91"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mock = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
async-std = { workspace = true }
log = { workspace = true }

config = { path = "../config" }
error = { path = "../error" }
fs = { path = "../fs" }
