[package]
name = "storage"
version = "0.1.0"
edition = "2021"
authors = ["Tibor Hudik <hello@hudik.eu>"]
readme = "README.md"
license-file = "../LICENSE.md"
description = "Application storage service that manages files and folders."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
actix-web = "^4"
futures-util = "^0.3"
validr = "^0.3"
serde = "^1"
serde_json = "^1"
chrono = "^0.4"
mime = { version = "^0.3" }
glob = "^0.3"
pin-project = "^1"
tokio = "^1"
async-trait = "^0.1"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
cached = "^0.43"

auth = { path = "../auth" }
config = { path = "../config" }
context = { path = "../context" }
cryptfns = { path = "../cryptfns" }
entity = { path = "../entity" }
error = { path = "../error" }
util = { path = "../util" }

[dev-dependencies]
context = { path = "../context", features = ["mock"] }
entity = { path = "../entity", features = ["mock"] }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
