[package]
name = "storage"
version = "0.1.0"
edition = "2021"
authors = ["Tibor Hudik <hello@hudik.eu>"]
readme = "README.md"
license-file = "../LICENSE.md"
description = "Application storage service that manages files and folders."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mock = ["context/mock", "entity/mock"]

[dependencies]
log = "^0.4"
actix-web = "^4"
validr = "^0.3"
serde = "^1"
serde_json = "^1"
chrono = "^0.4"
cached = "^0.43"
futures = "^0.3"

auth = { path = "../auth" }
context = { path = "../context" }
cryptfns = { path = "../cryptfns" }
entity = { path = "../entity" }
error = { path = "../error" }
fs = { path = "../fs" }
util = { path = "../util" }

[dev-dependencies]
context = { path = "../context", features = ["mock"] }
entity = { path = "../entity", features = ["mock"] }
